--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -281,7 +281,7 @@ a{
     left: 8%;
     top: 20%;
     width: 85%; 
-    height: 65%;
+    height: 58%;
     overflow: auto;
     background: #fff;
     z-index: 9;
@@ -294,15 +294,15 @@ a{
     flex-direction: row;
 }
 .popup_contentlogin{
-    width: 70%;
+    width: 50%;
 }
 .popup_imagelogin{
-    width: 30%;
+    width: 50%;
     margin-top: auto;
     margin-bottom: auto;
 }
 .popup_imagelogin img{
-    width: 100%;
+    width: 80%;
 }
 .popup_contentlogin p{
     text-align: justify;
@@ -318,7 +318,7 @@ a{
 /*Login Form*/
 .login-page {
     width: 360px;
-    padding: 8% 0 0;
+    /* padding: 8% 0 0; */
     margin: auto;
   }
   .form {
@@ -326,7 +326,7 @@ a{
     z-index: 1;
     background: #FFFFFF;
     max-width: 360px;
-    margin: 0 auto 100px;
+    margin: 0 auto 40px;
     padding: 45px;
     text-align: center;
     box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.24);
@@ -346,8 +346,9 @@ a{
     font-family: "Roboto", sans-serif;
     text-transform: uppercase;
     outline: 0;
-    background: #4CAF50;
+    background: aqua;
     width: 100%;
+    border-radius: 25px;
     border: 0;
     padding: 15px;
     color: #FFFFFF;
@@ -357,7 +358,7 @@ a{
     cursor: pointer;
   }
   .form button:hover,.form button:active,.form button:focus {
-    background: #43A047;
+    background: rgb(72, 224, 224);
   }
   .form .message {
     margin: 15px 0 0;
@@ -365,7 +366,7 @@ a{
     font-size: 12px;
   }
   .form .message a {
-    color: #4CAF50;
+    color: aqua;
     text-decoration: none;
   }
   .form .register-form {
@@ -492,10 +493,6 @@ a{
     width: 80%;
     background: #fff;
     color: #000;
-    border: gray solid 1px;  
-    border-radius: 10px;
-    height: 100px;
-    font-family: 'Montserrat', sans-serif;
 }
 .send{
     margin: 0 auto;
@@ -647,10 +644,6 @@ a{
         width: 80%;
         background: #fff;
         color: #000;
-        border: gray solid 1px;  
-        border-radius: 10px;
-        height: 100px;
-        font-family: 'Montserrat', sans-serif;
     }
 }
     
